GNOME Bugzilla – Bug 769029
gmessage: compiler complains about -Wformat-nonliteral
Last modified: 2016-07-21 11:13:12 UTC
Created attachment 331868 [details] [review] suppress -Wformat-nonliteral warning Compiling with clang 3.6.2 against current master, I got this error: gmessages.c:1446:53: error: format string is not a string literal [-Werror,-Wformat-nonliteral] size = _g_vsnprintf (buffer, sizeof (buffer), format, args); ^~~~~~ gmessages.c:1451:55: error: format string is not a string literal [-Werror,-Wformat-nonliteral] message = message_allocated = g_strdup_vprintf (format, args); ^~~~~~ The patch is attached.