gmessage: Suppress string format literal warning

https://bugzilla.gnome.org/show_bug.cgi?id=769029